--- a/src/codemirror/zettlr/zettlr.css
+++ b/src/codemirror/zettlr/zettlr.css
@@ -1,7 +1,3 @@
-tr p {
-    margin: 2px;
-}
-
 .CodeMirror-gutter-wrapper {
     left: -12px !important;
 }
@@ -48,3 +44,19 @@ tr p {
     background-color: darkgrey;
 }
 
+.table-helper {
+    border: 1px solid #e6e6e6;
+}
+
+.table-helper tr:nth-child(odd) {
+    background-color: #f4f5f5;
+}
+
+table.table-helper td {
+    padding: 6px;
+    border: 1px solid #E6E6E6;
+}
+
+tr p {
+    margin: 2px;
+}
